fix(digital-cards): Apply the review findings on the card surfaces
Changes:
- Clear the file input after reading it, so the same file can be picked again
- Restore the colour suggestion rule when the form is reset
- Name the failing action correctly when unpinning
- Take the card type as the wire's plain string, falling back instead of rendering undefined
- Encode the checkout code once per render, and use Stream.toList on the backend

Picking a photo, removing it, then picking the same file again did nothing,
because the input still held the old value and fired no change event. Resetting a
new card left colourCustomized true, so chain and image suggestions stayed off for
the rest of the session.